[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,15 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <ul class="topnav" id="myTopnav">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+  <li class="icon">
+    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+  </li>
+</ul>
         <br>
         <div class="center text-big bold">
         Assalamu allikkum, I am your webapp.
