[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,8 @@
 </ul>
         <br>
         <div class="center text-big bold">
-        Assalamu allikkum, I am your webapp.
+            WELCOME!
+                TO PAINTING ART WEBSITE .
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
