[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,8 +18,8 @@
 </ul>
         <br>
         <div class="center text-big bold">
-            WELCOME!
-                TO PAINTING ART WEBSITE .
+        <h1>WELCOME!</h1>   <br>
+            <h4>    TO PAINTING ART WEBSITE.</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
