[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="/ui/img.jpg" class="img-medium"/>
         </div>
         <ul class="topnav" id="myTopnav">
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="#gallary">g=Gallary</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
   <li class="icon">
@@ -18,8 +18,8 @@
 </ul>
         <br>
         <div class="center text-big bold">
-        <h1>WELCOME!</h1>   <br>
-            <h4>    TO PAINTING ART WEBSITE.</h4>
+      <center>  <h1>WELCOME!</h1>   <br>
+            <h4>    TO <u>AR</u> WEBSITE.</h4> </center>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
