--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <ul class="topnav" id="myTopnav">
   <li><a href="#home">Home</a></li>
-  <li><a href="#gallary">g=Gallary</a></li>
+  <li><a href="#gallary">Gallary</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
   <li class="icon">
