[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <br>
         <div class="center text-big bold">
       <center>  <h1>WELCOME!</h1>   <br>
-            <h4>    TO <u>AR</u> WEBSITE.</h4> </center>
+            <h4>    TO <u><h3>ART</h3></u> WEBSITE.</h4> </center>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
