[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/img.jpg" class="img-medium"/>
+            <img src="https://github.com/fizerali/imad-2016-app/blob/master/ui/img.jpg" class="img-medium"/>
         </div>
         <ul class="topnav" id="myTopnav">
   <li><a href="#home">Home</a></li>
@@ -19,7 +19,7 @@
         <br>
         <div class="center text-big bold">
       <center>  <h1>WELCOME!</h1>   <br>
-            <h4>    TO <u><h3>ART</h3></u> WEBSITE.</h4> </center>
+              <h4> TO <u><h2>ART</h2></u> WEBSITE.</h4> </center>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
