--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,17 @@
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
   <li class="icon">
+      <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+<span onclick="openNav()">open</span>
+<div id="main">
+  ...
+</div>
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
